# fourier-soft-2d

./: CMakeLists.txt  LICENSE.MD  README.md  registrationOfTwoImageScans.cpp  registrationOfTwoPCLScans.cpp
inputFiles/: scan1.pcd  scan2.pcd
registration/include/: scanRegistrationClass.h  softCorrelationClass.h  softDescriptorRegistration.h
registration/src/: scanRegistrationClass.cpp  softCorrelationClass.cpp  softDescriptorRegistration.cpp
soft20/: README.md
tools/: README.md
tools/include/: generalHelpfulTools.h
tools/matlabVisualization/: plotAllPossibleSolutionsForOneScan.m
tools/src/: generalHelpfulTools.cpp
